--- a/package.json
+++ b/package.json
@@ -11,14 +11,6 @@
     },
     "devDependencies": {
         "axios": "^0.19",
-<<<<<<< HEAD
-        "cross-env": "^7.0",
-        "laravel-mix": "^5.0.1",
-        "lodash": "^4.17.13",
-        "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
-=======
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
         "jquery": "^3.2",
@@ -32,7 +24,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.14.0",
-        "admin-lte": "^3.0.4"
->>>>>>> 10c4c2e619c91fee98607f00be38764c6adb6010
+        "admin-lte": "^3.0.4",
+        "datatables.net": "^1.10.21"
     }
 }
